WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88889
[BlackBerry] Scale was incorrect when reloading a simple web page after initial load
https://bugs.webkit.org/show_bug.cgi?id=88889
Summary
[BlackBerry] Scale was incorrect when reloading a simple web page after initi...
Jacky Jiang
Reported
2012-06-12 10:43:59 PDT
PR164442
Attachments
Committed, r=atreat
(5.06 KB, patch)
2012-06-12 13:09 PDT
,
Jacky Jiang
no flags
Details
Formatted Diff
Diff
Patch 2
(3.00 KB, patch)
2012-06-26 17:30 PDT
,
Jacky Jiang
no flags
Details
Formatted Diff
Diff
Updated patch
(3.29 KB, patch)
2012-06-27 09:52 PDT
,
Jacky Jiang
tonikitoo
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2012-06-12 10:48:18 PDT
When reloading a web page with the load type FrameLoadTypeSame after the initial load, the scale of the web page can became incorrect.
Jacky Jiang
Comment 2
2012-06-12 13:09:20 PDT
Created
attachment 147136
[details]
Committed, r=atreat
Adam Treat
Comment 3
2012-06-12 14:24:59 PDT
Comment on
attachment 147136
[details]
Committed, r=atreat Looks good Jacky!
Jacky Jiang
Comment 4
2012-06-12 14:48:46 PDT
Committed
r120124
: <
https://trac.webkit.org/changeset/120124
>
Jacky Jiang
Comment 5
2012-06-26 17:07:44 PDT
Reopen it, will fix one more issue.
Jacky Jiang
Comment 6
2012-06-26 17:13:49 PDT
(In reply to
comment #5
)
> Reopen it, will fix one more issue.
Please see another issue's reproduce steps on #
comment 6
of PR164442.
Jacky Jiang
Comment 7
2012-06-26 17:30:09 PDT
Created
attachment 149643
[details]
Patch 2 This patch is to fix the second issue on #
comment 6
of PR164442.
Antonio Gomes
Comment 8
2012-06-26 19:36:16 PDT
Comment on
attachment 149643
[details]
Patch 2 It is conceptually strange that FrameLoadTypeStandard dispatchDidFirstVisuallyNonEmptyLayout is called after load finished state. What kind of navigation have FrameLoadTypeStarndard? The way this bug manifests should be stated in the changelog.
Jacky Jiang
Comment 9
2012-06-27 07:42:03 PDT
(In reply to
comment #8
)
> (From update of
attachment 149643
[details]
) > It is conceptually strange that FrameLoadTypeStandard dispatchDidFirstVisuallyNonEmptyLayout is called after load finished state. > > What kind of navigation have FrameLoadTypeStarndard? The way this bug manifests should be stated in the changelog.
As I have talked with Antonio, I would mention the timer here to be more clear.
Jacky Jiang
Comment 10
2012-06-27 09:52:55 PDT
Created
attachment 149767
[details]
Updated patch Updated the patch based on the comments.
Antonio Gomes
Comment 11
2012-06-27 10:32:54 PDT
Comment on
attachment 149767
[details]
Updated patch View in context:
https://bugs.webkit.org/attachment.cgi?id=149767&action=review
> Source/WebKit/blackberry/Api/WebPage.cpp:1642 > + // For FrameLoadTypeSame or FrameLoadTypeStandard load, the layout timer can be fired which can call dispatchDidFirstVisuallyNonEmptyLayout()
loads?
Jacky Jiang
Comment 12
2012-06-27 10:39:49 PDT
(In reply to
comment #11
)
> (From update of
attachment 149767
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=149767&action=review
> > > Source/WebKit/blackberry/Api/WebPage.cpp:1642 > > + // For FrameLoadTypeSame or FrameLoadTypeStandard load, the layout timer can be fired which can call dispatchDidFirstVisuallyNonEmptyLayout() > > loads?
Should be load, I use "or" here.
Jacky Jiang
Comment 13
2012-06-27 11:46:49 PDT
Comment on
attachment 149767
[details]
Updated patch Committed manually
r121355
:
http://trac.webkit.org/changeset/121355
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug